Update SecurityConfig.java 2ndmethod